--- a/Projects/data science from scratch/book notes/5. Neural networks and deep learning.ipynb
+++ b/Projects/data science from scratch/book notes/5. Neural networks and deep learning.ipynb
@@ -21,15 +21,15 @@
     "  - also known as a *dense layer* in Keras, a linear layer refers to a fully connected layer \n",
     "  - it relays the input dimensions (10 in the example below) to the output dimensions (4)\n",
     "\n",
-    "- **initiatialision scheme**\n",
+    "- **initialisation scheme**\n",
     "  - weights are initialised with a random value for each weight. \n",
     "    - The book discusses Random Uniform (`random.random()`), Standard Normal, and the *Xavier initialisation*\n",
     "  - This as well as the activation function is specified in the *add layer* method\n",
     "\n",
     "- **activation**\n",
-    "  - The book started with a `sigmoid`, then used a `tanh` (hyperbolic tangent). More popular is `Relu` (Rectified Linear Unit), a type of activation function that introduces non-linearity, $f(x) = max(0, x)$.\n",
+    "  - The book started with a `sigmoid`, then used a `tanh` (hyperbolic tangent). More popular is `Relu` (Rectified Linear Unit), $f(x) = max(0, x)$.\n",
     "  - `Softmax` translates weights to a probability that sums up as 1.\n",
-    "  - `Cross-entropy` (sometimes `neg log likelihood`) takes the probabilities and minimises the loss, similar to the `least squares sum` in lin reg. It is a loss function often used in conjunction with softmax activation in the output layer of a neural network model. The purpose of the cross-entropy loss function is to measure the dissimilarity between the predicted probability distribution and the true distribution. In other words, it's a measure of how well the model's predicted probabilities match the true labels.\n",
+    "  - `Cross-entropy` (sometimes `neg log likelihood`) takes the probabilities and minimises the loss, similar to the `least squares sum` in lin reg. It is a **loss function** often used in conjunction with softmax activation in the output layer of a neural network model. The purpose of the cross-entropy loss function is to measure the dissimilarity between the predicted probability distribution and the true distribution. In other words, it's a measure of how well the model's predicted probabilities match the true labels.\n",
     "\n",
     "- **optimisation**\n",
     "  - this is where the loss function is optimised and the weights (params) are updated\n",
@@ -60,7 +60,7 @@
     "from keras.layers import Dense, Dropout\n",
     "from keras.utils import np_utils\n",
     "\n",
-    "# Function to convert a number to a binary string\n",
+    "# Function to convert a number to a binary string (see book)\n",
     "def binary_encode(i, num_digits):\n",
     "    return np.array([i >> d & 1 for d in range(num_digits)])"
    ]
@@ -124,6 +124,7 @@
    "source": [
     "# Generate training data\n",
     "NUM_DIGITS = 10\n",
+    "\n",
     "trX = np.array([binary_encode(i, NUM_DIGITS) for i in range(101, 2 ** NUM_DIGITS)])\n",
     "trY = np.array([fizz_buzz_encode(i) for i in range(101, 2 ** NUM_DIGITS)])"
    ]
@@ -1327,7 +1328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the `history.history` thanks to naming the `model.fit` function"
+    "Using the `history.history` thanks to naming the `.fit` history: `history = model.fit()`"
    ]
   },
   {
