--- a/Projects/data science projects/lin reg 2.ipynb
+++ b/Projects/data science projects/lin reg 2.ipynb
@@ -141,42 +141,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The model performance for training set\n",
-      "RMSE is 18.17166301583121\n",
-      "\n",
-      "\n",
-      "The model performance for testing set\n",
-      "RMSE is 15.864189949847772\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "y_train_predict = lr.predict(X_train)\n",
-    "\n",
-    "# model evaluation for training set\n",
-    "rmse = (np.sqrt(mean_squared_error(y_train, y_train_predict)))\n",
-    "print(\"The model performance for training set\")\n",
-    "print('RMSE is {}'.format(rmse))\n",
-    "print(\"\\n\")\n",
-    "\n",
-    "# model evaluation for testing set\n",
-    "y_test_predict = lr.predict(X_test)\n",
-    "rmse = (np.sqrt(mean_squared_error(y_test, y_test_predict)))\n",
-    "print(\"The model performance for testing set\")\n",
-    "print('RMSE is {}'.format(rmse))"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -212,6 +176,42 @@
     "\n",
     "print(\"The model performance for testing set\")\n",
     "print('MSE is {}'.format(mean_squared_error(y_test, y_test_predict)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model performance for training set\n",
+      "RMSE is 18.17166301583121\n",
+      "\n",
+      "\n",
+      "The model performance for testing set\n",
+      "RMSE is 15.864189949847772\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "y_train_predict = lr.predict(X_train)\n",
+    "\n",
+    "# model evaluation for training set\n",
+    "rmse = (np.sqrt(mean_squared_error(y_train, y_train_predict)))\n",
+    "print(\"The model performance for training set\")\n",
+    "print('RMSE is {}'.format(rmse))\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# model evaluation for testing set\n",
+    "y_test_predict = lr.predict(X_test)\n",
+    "rmse = (np.sqrt(mean_squared_error(y_test, y_test_predict)))\n",
+    "print(\"The model performance for testing set\")\n",
+    "print('RMSE is {}'.format(rmse))"
    ]
   },
   {
@@ -1937,9 +1937,7 @@
     "\n",
     "This is what's being computed in the line `result = logistic(x_test @ beta.T)`. The `@` operator computes the dot product of `beta` and each row of `x_test`, and the `logistic` function applies the logistic function to these dot products.\n",
     "\n",
-    "The result is an array of the model's predictions for the inputs in `x_test`. Each prediction is a number between 0 and 1, representing the model's estimated probability that the corresponding input belongs to the positive class.\n",
-    "\n",
-    "As for plotting, the code I provided doesn't include a plot. It only computes the model's predictions. If you want to plot the predictions, you could do so with a line plot or a scatter plot, depending on what you want to visualize. However, keep in mind that the predictions are probabilities, so they will all be between 0 and 1. If your `x_test` data is 2-dimensional, you might need to reduce it to 1 dimension to plot it against the predictions"
+    "The result is an array of the model's predictions for the inputs in `x_test`. Each prediction is a number between 0 and 1, representing the model's estimated probability that the corresponding input belongs to the positive class."
    ]
   },
   {
